sw/qa/extras/uiwriter/uiwriter8.cxx
@@ -2576,6 +2576,38 @@ CPPUNIT_TEST_FIXTURE(SwUiWriterTest8, testCursorPositionAfterUndo)
     CPPUNIT_ASSERT(!pWrtShell->GetViewOptions()->IsShowOutlineContentVisibilityButton());
 }
 
+CPPUNIT_TEST_FIXTURE(SwUiWriterTest8, testTdf73483)
+{
+    // Given a document with a first paragraph having a manually set page break with page style
+    createSwDoc("pageBreakWithPageStyle.fodt");
+    SwDoc* pDoc = getSwDoc();
+    SwWrtShell* pWrtShell = pDoc->GetDocShell()->GetWrtShell();
+
+    CPPUNIT_ASSERT_EQUAL(OUString("Right Page"), pWrtShell->GetCurPageStyle());
+
+    dispatchCommand(mxComponent, ".uno:ResetAttributes", {}); // Ctrl+M "Clear Direct Formatting"
+    // Make sure that clearing direct formatting doesn't clear the page style
+    CPPUNIT_ASSERT_EQUAL(OUString("Right Page"), pWrtShell->GetCurPageStyle());
+
+    // Make sure that the page break with page style survives ODF save-and-reload
+    reload("writer8", "pageBreakWithPageStyle.odt");
+
+    xmlDocUniquePtr pXml = parseExport("content.xml");
+    CPPUNIT_ASSERT(pXml);
+    OUString para_style_name
+        = getXPath(pXml, "/office:document-content/office:body/office:text/text:p", "style-name");
+    // Without the fix in place, this would fail
+    CPPUNIT_ASSERT(!para_style_name.equalsIgnoreAsciiCase("Standard"));
+
+    OString para_style_path
+        = "/office:document-content/office:automatic-styles/style:style[@style:name='"
+          + para_style_name.toUtf8() + "']";
+    assertXPath(pXml, para_style_path, "family", "paragraph");
+    // Without the fix in place, the autostyle had no parent
+    assertXPath(pXml, para_style_path, "parent-style-name", "Standard");
+    assertXPath(pXml, para_style_path, "master-page-name", "Right_20_Page");
+}
+
 CPPUNIT_PLUGIN_IMPLEMENT();
 
 /* vim:set shiftwidth=4 softtabstop=4 expandtab: */
